@@ -28,4 +28,3 @@ Let's check the content::
     skins
     tests
     version.txt
-    zopeskel.txt
